--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/index.css">
   </head>
 
-  <body style="background-image: linear-gradient(-45deg,red,lightblue,whitesmoke);">
+  <body>
 
     <!-- Fixed navbar -->
      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
@@ -224,7 +224,7 @@
 <div class="container-fluid" style="padding: 0px;background-color:whitesmoke;">
         <div class="container-fluid">
         <div class="container-fluid">
-        <h2>S E R V I C E S &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;P R O J E C T S</h2></div><hr>
+        <h2>S&nbsp; E &nbsp;R&nbsp; V&nbsp; I&nbsp; C&nbsp; E&nbsp; S</h2></div><hr>
 <!--   vertical tabs       -->
 <div class="d-flex flex-row mt-2">
 	<ul class="nav nav-tabs nav-tabs--vertical nav-tabs--left" role="navigation">
@@ -243,13 +243,18 @@
 	</ul>
 	<div class="tab-content">
 		<div class="tab-pane fade show active" id="lorem" role="tabpanel">
-		<h2>Web &nbsp;Based</h2>
-			<div class="row">
-			<div class="col-lg-6 col-xs-12"><img src="img/serviceimg/webimg.jpg" style="padding: 20px;" width="600px" height="300px" alt=""></div>
-			<div class="col-lg-6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px;">Aliquam hendrerit nunc vitae nisi efficitur, eu porta sem aliquam. Aenean tincidunt mi sed mi sodales bibendum. Proin dolor ipsum, mollis venenatis velit eu, iaculis laoreet mi. Mauris eget egestas felis, sit amet finibus nunc. Aliquam non dui sit amet erat auctor mollis ac eget ante. Quisque at quam augue. Nulla dignissim, augue nec cursus consequat, mi nulla efficitur augue, vel fringilla turpis quam eu nunc. Quisque rutrum vehicula lacus sodales molestie. Mauris vel felis sit amet erat maximus cursus ut a velit. In hac habitasse platea dictumst. Vestibulum vel neque sit amet nisl finibus fermentum.</p>
+<!--		<h2>Web &nbsp;Based</h2>-->
+			<div class="row"  style="padding-bottom: 30px;">
+			<div class="col-lg-6 col-md-12 col-xs-12"><img src="img/serviceimg/web.jpg" class="img-fluid" style="padding: 20px;" height="300px" alt=""></div>
+			<div class="col-lg-6 col-md=6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px; padding-bottom: 0px;font-size: 30px;">Website  based services  : </p>
+			<p align="center">Cutting Edge website design as per client needs. </p>
+				<p align="center">Backend programming of website. (UI) </p>
+				<p align="center">Manage website's data thorugh database.</p>
+                <p align="center">Develop commercial Website.</p>
 			<div align="center">
 			<a  id="WebReadmore" class="btn btn-md btn-primary" href="../../components/#navbar" role="button">Read More &raquo;</a></div>
 			</div>
+<!--
 			<div class="col-lg-12"><hr>
 			    <h4>&nbsp;&nbsp; P r o j e c t s : </h4><hr>
 			    <ul id="projects">
@@ -258,16 +263,22 @@
 			     <li>Register Form Website.</li>
 			    </ul>
 			</div>
+-->
 			</div>
 		</div>
 		<div class="tab-pane fade" id="ipsum" role="tabpanel">
-			<h2>Mobile &nbsp;Based</h2>
-			<div class="row">
-			<div class="col-lg-6 col-xs-12"><img src="img/serviceimg/webimg.jpg" style="padding: 20px;" width="600px" height="300px" alt=""></div>
-			<div class="col-lg-6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px;">Aliquam hendrerit nunc vitae nisi efficitur, eu porta sem aliquam. Aenean tincidunt mi sed mi sodales bibendum. Proin dolor ipsum, mollis venenatis velit eu, iaculis laoreet mi. Mauris eget egestas felis, sit amet finibus nunc. Aliquam non dui sit amet erat auctor mollis ac eget ante. Quisque at quam augue. Nulla dignissim, augue nec cursus consequat, mi nulla efficitur augue, vel fringilla turpis quam eu nunc. Quisque rutrum vehicula lacus sodales molestie. Mauris vel felis sit amet erat maximus cursus ut a velit. In hac habitasse platea dictumst. Vestibulum vel neque sit amet nisl finibus fermentum.</p>
+<!--			<h2>Mobile &nbsp;Based</h2>-->
+			<div class="row"  style="padding-bottom: 30px;">
+			<div class="col-lg-6 col-md-12 col-xs-12"><img src="img/serviceimg/mobile.png" class="img-fluid" style="padding: 20px;" height="300px" alt=""></div>
+			<div class="col-lg-6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px; padding-bottom: 0px;font-size: 30px;">Website  based services  : </p>
+			<p align="center">Cutting Edge website design as per client needs. </p>
+				<p align="center">Backend programming of website. (UI) </p>
+				<p align="center">Manage website's data thorugh database.</p>
+                <p align="center">Develop commercial Website.</p>
 			<div align="center">
 			<a id="WebReadmore" class="btn btn-md btn-primary" href="../../components/#navbar" role="button">Read More &raquo;</a></div>
 			</div>
+<!--
 			<div class="col-lg-12"><hr>
 			    <h4>&nbsp;&nbsp; P r o j e c t s : </h4><hr>
 			    <ul id="projects">
@@ -276,16 +287,22 @@
 			     <li>Register Form Website.</li>
 			    </ul>
 			</div>
+-->
 			</div>
 		</div>
 		<div class="tab-pane fade" id="dolor" role="tabpanel">
-			<h2>Windows &nbsp;Based</h2>
-			<div class="row">
-			<div class="col-lg-6 col-xs-12"><img src="img/serviceimg/webimg.jpg" style="padding: 20px;" width="600px" height="300px" alt=""></div>
-			<div class="col-lg-6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px;">Aliquam hendrerit nunc vitae nisi efficitur, eu porta sem aliquam. Aenean tincidunt mi sed mi sodales bibendum. Proin dolor ipsum, mollis venenatis velit eu, iaculis laoreet mi. Mauris eget egestas felis, sit amet finibus nunc. Aliquam non dui sit amet erat auctor mollis ac eget ante. Quisque at quam augue. Nulla dignissim, augue nec cursus consequat, mi nulla efficitur augue, vel fringilla turpis quam eu nunc. Quisque rutrum vehicula lacus sodales molestie. Mauris vel felis sit amet erat maximus cursus ut a velit. In hac habitasse platea dictumst. Vestibulum vel neque sit amet nisl finibus fermentum.</p>
+<!--			<h2>Windows &nbsp;Based</h2>-->
+			<div class="row"  style="padding-bottom: 30px;">
+			<div class="col-lg-6 col-md-12 col-xs-12"><img src="img/serviceimg/webimg.jpg" class="img-fluid" style="padding: 20px;" height="300px" alt=""></div>
+			<div class="col-lg-6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px; padding-bottom: 0px;font-size: 30px;">Website  based services  : </p>
+			<p align="center">Cutting Edge website design as per client needs. </p>
+				<p align="center">Backend programming of website. (UI) </p>
+				<p align="center">Manage website's data thorugh database.</p>
+                <p align="center">Develop commercial Website.</p>
 			<div align="center">
 			<a id="WebReadmore" class="btn btn-md btn-primary" href="../../components/#navbar" role="button">Read More &raquo;</a></div>
 			</div>
+<!--
 			<div class="col-lg-12"><hr>
 			    <h4>&nbsp;&nbsp; P r o j e c t s : </h4><hr>
 			    <ul id="projects">
@@ -294,16 +311,22 @@
 			     <li>Register Form Website.</li>
 			    </ul>
 			</div>
+-->
 			</div>
 		</div>
 		<div class="tab-pane fade" id="sit-amet" role="tabpanel">
-			<h2>I O T &nbsp;Based</h2>
-			<div class="row">
-			<div class="col-lg-6 col-xs-12"><img src="img/serviceimg/webimg.jpg" style="padding: 20px;" width="600px" height="300px" alt=""></div>
-			<div class="col-lg-6 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px;">Aliquam hendrerit nunc vitae nisi efficitur, eu porta sem aliquam. Aenean tincidunt mi sed mi sodales bibendum. Proin dolor ipsum, mollis venenatis velit eu, iaculis laoreet mi. Mauris eget egestas felis, sit amet finibus nunc. Aliquam non dui sit amet erat auctor mollis ac eget ante. Quisque at quam augue. Nulla dignissim, augue nec cursus consequat, mi nulla efficitur augue, vel fringilla turpis quam eu nunc. Quisque rutrum vehicula lacus sodales molestie. Mauris vel felis sit amet erat maximus cursus ut a velit. In hac habitasse platea dictumst. Vestibulum vel neque sit amet nisl finibus fermentum.</p>
+<!--			<h2>I O T &nbsp;Based</h2>-->
+			<div class="row" style="padding-bottom: 30px;">
+			<div class="col-lg-7 col-md-12 col-xs-12"><img src="img/serviceimg/iot2.png" class="img-fluid" style="padding: 20px;" height="300px" alt=""></div>
+			<div class="col-lg-5 col-xs-12" id="lorempara"><p style="padding: 20px;padding-top: 30px; padding-bottom: 0px;font-size: 30px;">Website  based services  : </p>
+			<p align="center">Cutting Edge website design as per client needs. </p>
+				<p align="center">Backend programming of website. (UI) </p>
+				<p align="center">Manage website's data thorugh database.</p>
+                <p align="center">Develop commercial Website.</p>
 			<div align="center">
 			<a id="WebReadmore" class="btn btn-md btn-primary" href="../../components/#navbar" role="button">Read More &raquo;</a></div>
 			</div>
+<!--
 			<div class="col-lg-12"><hr>
 			    <h4>&nbsp;&nbsp; P r o j e c t s : </h4><hr>
 			    <ul id="projects">
@@ -312,6 +335,7 @@
 			     <li>Register Form Website.</li>
 			    </ul>
 			</div>
+-->
 			</div>
 		</div>
 	</div>
@@ -323,7 +347,7 @@
 
 
 <!--    static img content-->
-           <div class="container-fluid">
+           <div class="container-fluid" style="background-image: linear-gradient(-45deg,red,lightblue,whitesmoke);">
                 <div class="jumbotron" style="margin-bottom: 80px; background-color: transparent;">
                     <h1 align="center" style="color: white;margin-top: 70px; margin-bottom: 20px;">IT Services</h1>
                     <p align="center" style="color:dimgray;font-size:22px;font-family: 'raleway',san-serif;">Web Design, App Development, Home Automation</p>
